progress on test cases